--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -25,15 +25,7 @@
           "point": 25.88
         }
       ],
-      "playersLock": [
-        {
-          "player": "manus9331",
-          "timelock": 1761858356873,
-          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
-          "lockTime": 1800000,
-          "lockCode": 9007
-        }
-      ]
+      "playersLock": []
     },
     "thai_168": {
       "players": [],
