--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -8,7 +8,7 @@
           "time": 1761853197611,
           "time_limit": 1761939597611,
           "status": "success",
-          "player": "nus9331",
+          "player": "manus9331",
           "point": 15.89
         }
       ],
