--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -8,7 +8,7 @@
           "time": 1762012885943,
           "time_limit": 1762099285943,
           "status": "success",
-          "player": "VIP0955171905",
+          "player": "tong551212",
           "point": 24.88
         },
         {
@@ -16,7 +16,7 @@
           "time": 1762012914659,
           "time_limit": 1762099314659,
           "status": "success",
-          "player": "manus9331",
+          "player": "poypy789",
           "point": 23.88
         }
       ],
