--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,7 +2,16 @@
   "apply_code_today": {
     "date": "2025-11-03",
     "thai_789bet": {
-      "players": [],
+      "players": [
+         {
+          "promo_code": "Zrf6ddR",
+          "time": 1762099562614,
+          "time_limit": 1762185962614,
+          "status": "success",
+          "player": "poypy789",
+          "point": 24.88
+        }
+      ],
       "playersLock": []
     },
     "thai_jun88k36": {
