--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -10,7 +10,15 @@
           "status": "success",
           "player": "poypy789",
           "point": 24.88
-        }
+        },
+        {
+          "promo_code": "Zrf6ddR",
+          "time": 1762099562614,
+          "time_limit": 1762185962614,
+          "status": "success",
+          "player": "nus9331",
+          "point": 24.88
+        }        
       ],
       "playersLock": []
     },
@@ -23,7 +31,15 @@
           "status": "success",
           "player": "manus9331",
           "point": 24.88
-        }
+        },
+        {
+          "promo_code": "Zrf6ddR",
+          "time": 1762099562614,
+          "time_limit": 1762185962614,
+          "status": "success",
+          "player": "aroon11",
+          "point": 24.88
+        }        
       ],
       "playersLock": []
     }
