--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,30 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2025-11-03",
+    "date": "2025-11-04",
     "thai_789bet": {
-      "players": [
-         {
-          "promo_code": "Zrf6ddR",
-          "time": 1762099562614,
-          "time_limit": 1762185962614,
-          "status": "success",
-          "player": "poypy789",
-          "point": 24.88
-        }
-      ],
+      "players":  [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "Zrf6ddR",
-          "time": 1762099562614,
-          "time_limit": 1762185962614,
-          "status": "success",
-          "player": "manus9331",
-          "point": 24.88
-        }
-      ],
+      "players":  [],
       "playersLock": []
     }
   }
