--- a/railway.toml
+++ b/railway.toml
@@ -8,7 +8,7 @@ numReplicas = 1
 healthcheckPath = "/health"
 sleepApplication = true
 useLegacyStacker = false
-multiRegionConfig = {"asia-southeast1-eqsg3a":{"numReplicas":1}}
 restartPolicyType = "ON_FAILURE"
 healthcheckTimeout = 300
 restartPolicyMaxRetries = 10
+multiRegionConfig = { "asia-southeast1-eqsg3a" = { numReplicas = 1 } }
