--- a/railway.toml
+++ b/railway.toml
@@ -11,4 +11,6 @@ useLegacyStacker = false
 restartPolicyType = "ON_FAILURE"
 healthcheckTimeout = 300
 restartPolicyMaxRetries = 10
-multiRegionConfig = { "asia-southeast1-eqsg3a" = { numReplicas = 1 } }
+
+[deploy.multiRegionConfig."asia-southeast1-eqsg3a"]
+numReplicas = 1
