--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,24 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "lLyg2mw",
+          "time": 1762415168714,
+          "time_limit": 1762501568714,
+          "status": "success",
+          "player": "nuschai",
+          "point": 16.88
+        },
+        {
+          "promo_code": "lLyg2mw",
+          "time": 1762415168714,
+          "time_limit": 1762501568714,
+          "status": "success",
+          "player": "ary11",
+          "point": 16.88
+        }
+      ],
       "playersLock": []
     }
   }
