--- a/railway.toml
+++ b/railway.toml
@@ -8,9 +8,12 @@ numReplicas = 1
 healthcheckPath = "/health"
 sleepApplication = true
 useLegacyStacker = false
+
+[deploy.multiRegionConfig]
+[deploy.multiRegionConfig."asia-southeast1-eqsg3a"]
+numReplicas = 1
+
 restartPolicyType = "ON_FAILURE"
 healthcheckTimeout = 300
 restartPolicyMaxRetries = 10
 
-[deploy.multiRegionConfig."asia-southeast1-eqsg3a"]
-numReplicas = 1
