--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,16 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "LMqcejY",
+          "time": 1765164601939,
+          "time_limit": 1765251001939,
+          "status": "success",
+          "player": "nus9331",
+          "point": 25.88
+        }
+      ],
       "playersLock": []
     }
   }
