--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -12,7 +12,7 @@
           "time": 1765164601939,
           "time_limit": 1765251001939,
           "status": "success",
-          "player": "nus9331",
+          "player": "Gio777",
           "point": 25.88
         }
       ],
