--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,62 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2025-12-19",
+    "date": "2025-12-21",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "iKQFZyLcg3OK",
-          "time": 1766109929564,
-          "time_limit": 1766196329564,
-          "status": "success",
-          "player": "aroon11",
-          "point": 25.88
-        },
-        {
-          "promo_code": "HlcGQc00TJy9",
-          "time": 1766124379509,
-          "time_limit": 1766210779509,
-          "status": "success",
-          "player": "vip0955171905",
-          "point": 23.88
-        },
-        {
-          "promo_code": "ZpJsnrzT9oVN",
-          "time": 1766124401979,
-          "time_limit": 1766210801979,
-          "status": "success",
-          "player": "borvon",
-          "point": 18.88
-        }              
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "TLK5AST3",
-          "time": 1766123286024,
-          "time_limit": 1766209686024,
-          "status": "success",
-          "player": "IAMKANYA",
-          "point": 19.88
-        },
-                {
-          "promo_code": "TLK5AST3",
-          "time": 1766123286024,
-          "time_limit": 1766209686024,
-          "status": "success",
-          "player": "nus9331",
-          "point": 19.88
-        },
-        {
-          "promo_code": "TLK5AST3",
-          "time": 1766123286024,
-          "time_limit": 1766209686024,
-          "status": "success",
-          "player": "ary11",
-          "point": 19.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
