--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -7,7 +7,15 @@
     },
     "thai_jun88k36": {
       "players": [],
-      "playersLock": []
+      "playersLock": [
+        {
+          "player": "bank0760",
+          "timelock": 1767646733741,
+          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
+          "lockTime": 1800000,
+          "lockCode": 9007
+        }
+      ]
     }
   }
 }
