--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,24 +2,7 @@
   "apply_code_today": {
     "date": "2026-01-12",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "8YvqlS3t1SIg",
-          "time": 1768153804099,
-          "time_limit": 1768240204099,
-          "status": "success",
-          "player": "aroon11",
-          "point": 22.88
-        },
-        {
-          "promo_code": "5sTkkZomPG5m",
-          "time": 1768153876827,
-          "time_limit": 1768240276827,
-          "status": "success",
-          "player": "manus9331",
-          "point": 16.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
