--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,7 +2,16 @@
   "apply_code_today": {
     "date": "2026-01-13",
     "thai_789bet": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "4VzZOJnUu6Lb",
+          "time": 1768305638856,
+          "time_limit": 1768392038856,
+          "status": "success",
+          "player": "manus9331",
+          "point": 18.88
+        }
+      ],
       "playersLock": []
     },
     "thai_jun88k36": {
