--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,17 +1,8 @@
 {
   "apply_code_today": {
-    "date": "2026-01-13",
+    "date": "2026-01-14",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "4VzZOJnUu6Lb",
-          "time": 1768305638856,
-          "time_limit": 1768392038856,
-          "status": "success",
-          "player": "manus9331",
-          "point": 18.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
