--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,48 +6,7 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "9E2LM7LD",
-          "time": 1768513204400,
-          "time_limit": 1768599604400,
-          "status": "success",
-          "player": "aroon11",
-          "point": 20.88
-        },
-        {
-          "promo_code": "T8BXFCF3",
-          "time": 1768513215385,
-          "time_limit": 1768599615385,
-          "status": "success",
-          "player": "bank0760",
-          "point": 27.88
-        },
-        {
-          "promo_code": "2UD2XD83",
-          "time": 1768513215385,
-          "time_limit": 1768599615385,
-          "status": "success",
-          "player": "nuschai",
-          "point": 24.88
-        },
-        {
-          "promo_code": "2UD2XD83",
-          "time": 1768513215385,
-          "time_limit": 1768599615385,
-          "status": "success",
-          "player": "manus9331",
-          "point": 24.88
-        },        
-        {
-          "promo_code": "ATFY878Z",
-          "time": 1768514500160,
-          "time_limit": 1768600900160,
-          "status": "success",
-          "player": "nus9331",
-          "point": 22.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
