--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -23,7 +23,16 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "OFA4OWCV",
+          "time": 1768581076676,
+          "time_limit": 1768667476676,
+          "status": "success",
+          "player": "nus9331",
+          "point": 22.88
+        }
+      ],
       "playersLock": []
     }
   }
