--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,38 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2026-01-16",
+    "date": "2026-01-18",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "LjmFynilb7GU",
-          "time": 1768579688030,
-          "time_limit": 1768666088030,
-          "status": "success",
-          "player": "nus9331",
-          "point": 16.88
-        },
-        {
-          "promo_code": "4NVwAWEuVxA6",
-          "time": 1768579697866,
-          "time_limit": 1768666097866,
-          "status": "success",
-          "player": "poypy789",
-          "point": 17.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "OFA4OWCV",
-          "time": 1768581076676,
-          "time_limit": 1768667476676,
-          "status": "success",
-          "player": "nus9331",
-          "point": 22.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
