--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,45 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2026-01-18",
+    "date": "2026-01-19",
     "thai_789bet": {
       "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "TMW6N3E8",
-          "time": 1768728816232,
-          "time_limit": 1768815216232,
-          "status": "success",
-          "player": "nuschai",
-          "point": 22.88
-        },
-        {
-          "promo_code": "BOS52305",
-          "time": 1768728845913,
-          "time_limit": 1768815245913,
-          "status": "success",
-          "player": "aroon11",
-          "point": 23.88
-        },
-        {
-          "promo_code": "6HLRBHN5",
-          "time": 1768728854246,
-          "time_limit": 1768815254246,
-          "status": "success",
-          "player": "ary11",
-          "point": 24.88
-        },
-        {
-          "promo_code": "IA3UE66F",
-          "time": 1768728859182,
-          "time_limit": 1768815259182,
-          "status": "success",
-          "player": "bank0760",
-          "point": 22.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
