--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -9,11 +9,11 @@
       "players": [],
       "playersLock": [
         {
-          "player": "ary11",
-          "timelock": 1768771654334,
-          "lockMessage": "กรุณาอย่าทำซ้ำบ่อยเกินไป กรุณาลองใหม่ในอีก 2 นาที",
-          "lockTime": 180000,
-          "lockCode": 9004
+          "player": "nus9331",
+          "timelock": 1768771897536,
+          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
+          "lockTime": 1800000,
+          "lockCode": 9007
         }
       ]
     }
