--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,7 +2,16 @@
   "apply_code_today": {
     "date": "2026-01-23",
     "thai_789bet": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "kQYMiCZioymg",
+          "time": 1769183232888,
+          "time_limit": 1769269632888,
+          "status": "success",
+          "player": "manus9331",
+          "point": 26.88
+        }
+      ],
       "playersLock": []
     },
     "thai_jun88k36": {
