--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,17 +1,8 @@
 {
   "apply_code_today": {
-    "date": "2026-01-23",
+    "date": "2026-01-24",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "kQYMiCZioymg",
-          "time": 1769183232888,
-          "time_limit": 1769269632888,
-          "status": "success",
-          "player": "manus9331",
-          "point": 26.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
