--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -7,15 +7,7 @@
     },
     "thai_jun88k36": {
       "players": [],
-      "playersLock": [
-        {
-          "player": "manus9331",
-          "timelock": 1769362439642,
-          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
-          "lockTime": 1800000,
-          "lockCode": 9007
-        }
-      ]
+      "playersLock": []
     }
   }
 }
